[gd_scene load_steps=3 format=3 uid="uid://dcf2fdr0kdl3k"]

[ext_resource type="Script" path="res://nodes/interaction/interaction_manager.gd" id="1_rsjxm"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3s2u6"]
radius = 100.0
height = 348.0

[node name="InteractionManager" type="Area2D"]
collision_layer = 2048
collision_mask = 2048
script = ExtResource("1_rsjxm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_3s2u6")

[connection signal="area_entered" from="." to="." method="_on_Interaction_Manager_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Interaction_Manager_area_exited"]
